# global-router

./: .coverage  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  GlobalRouter.py  LICENSE  README.md  app.py  assessment  auth.py  cli.py  constants.py  global_router.py  gr  gr.py  gr_logger.py  pyproject.toml  requirements.txt
.github/workflows/: cicd.yml  pylint.yml
api/: global_router.py
assessment/: run_all
benchmarks/: example.txt
components/: GlobalRouter.py  Net.py  Node.py  Path.py  net.py  node.py  path.py  utils.py
doc/: algorithm.rst  architecture.rst  cli.rst  conf.py  index.rst  models.rst  requirements.txt  userguide.rst
gr_logs/: gr_logger.py
logs/: gr_logger.py
models/: global_router.py  grid.py  net.py  node.py  path.py
templates/: dashboard.html  header.html  login.html  register.html  reset_password.html
tests/: global_router_test.py  grid_test.py  net_test.py  path_test.py
util/: util.py
utils/: utils.py
web/: app.py
web/static/: ajax.js
web/static/favicon/: about.txt
web/static/scripts/: ajax.js
web/static/styles/: style.css
web/templates/: dashboard.html  footer.html  header.html  login.html  register.html
